<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        android:alpha="0.55"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:id="@+id/titleTVLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_tv"
        android:id="@+id/titleTV"
        style="@style/title"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/miniTitleTV"
            android:layout_below="@+id/titleTV"
            android:text="@string/hire_now_tv"
            android:paddingTop="10dp"
            android:layout_centerHorizontal="true"
            style="@style/sub_title"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTVLayout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:id="@+id/inputsLayout">
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/fullname_ed"
        android:id="@+id/fullNameET"
        android:inputType="textPersonName"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_ed"
        android:id="@+id/email_ET"
        android:layout_below="@+id/fullNameET"
        android:inputType="textEmailAddress"
        />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputsLayout"
        android:layout_marginStart="15dp"
        android:id="@+id/gearLayout">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/gearRG">
        <RadioButton android:id="@+id/snowboardRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snowboard_rb"
            android:layout_marginStart="10dp"
            android:onClick="onCheckRadioButton"
            style="@style/radiobtns"/>
        <RadioButton
            android:id="@+id/skiRB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ski_rb"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:onClick="onCheckRadioButton"
            style="@style/radiobtns"/>
    </RadioGroup>
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/skiOrSnowboardImg"
            android:layout_toEndOf="@id/gearRG"
            android:layout_marginStart="50dp"
            android:background="@null"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/gearLayout"
        android:id="@+id/resortLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/off_white"
            android:id="@+id/resortLinearLayout">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resortTV"
        android:text="@string/pick_resort_TV"
        style="@style/resorts_tv"
        />
        </LinearLayout>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resortsSpinner"
        android:layout_toEndOf="@+id/resortLinearLayout"
        android:layout_marginStart="15dp"
        style="@style/spinner_colors">
        </Spinner>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/resortLayout"
        android:id="@+id/datesLayout">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startDateBtn"
        android:text="@string/startDate_btn"
        android:textAllCaps="false"
        android:padding="10dp"
        style="@style/first_day_btn"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberOfDaysET"
            android:layout_toEndOf="@+id/startDateBtn"
            android:layout_marginStart="25dp"
            android:hint="@string/enter_number_of_days"
            style="@style/number_of_days_et"
            android:inputType="numberSigned"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_below="@id/datesLayout"
        android:id="@+id/helmetLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxLinearLayout"
            android:background="@color/off_white"
            android:layout_marginTop="20dp">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_helmet_checkbox"
            android:id="@+id/helmentCheckbox"
            android:onClick="onCheckBoxButton"
            style="@style/need_helmet">
        </CheckBox>
        </LinearLayout>
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/helmetImg"
            android:layout_toEndOf="@+id/checkboxLinearLayout"
            android:layout_marginStart="20dp"
            android:background="@drawable/helmet_selector_red"
            android:scaleType="fitXY"
            android:src="@drawable/helmet_skiing_sport_512"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/goToPaymentLayout"
        android:layout_below="@+id/helmetLayout"
        android:layout_marginTop="35dp"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_paymentBtn"
            android:padding="15dp"
            android:textAllCaps="false"
            android:id="@+id/goToPaymentBtn"
            style="@style/go_to_payment_btn"
            android:layout_marginBottom="7dp">
        </Button>
    </RelativeLayout>
</RelativeLayout>
    </ScrollView>
</RelativeLayout>