<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="fitXY"
        android:alpha="0.55"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/priceLayout"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/priceTV"
        android:text="@string/price"
        android:textSize="45sp"
        android:textColor="@color/dark_red"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rateUsLayout"
        android:layout_below="@+id/priceLayout"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selectedResortTV"
            android:textSize="20sp"
            android:textColor="@color/emerald"
            android:paddingBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateUsTV"
            android:textSize="20sp"
            android:textColor="@color/emerald"
            android:text="@string/feedback"
            android:layout_below="@+id/selectedResortTV"
            ></TextView>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rateUsET"
            android:layout_below="@+id/rateUsTV"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_feedback_et"
            android:inputType="numberSigned"
            ></EditText>
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="90dp"
            android:layout_toEndOf="@id/rateUsET"
            android:background="@drawable/lightblue_btn"
            android:text="@string/submit_btn"
            android:textAllCaps="false" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rateUsLayout"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/starsRLayout">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/svstartsLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/starsLLayout"
            android:orientation="horizontal">
        </LinearLayout>
    </ScrollView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seeForecastLayout"
        android:layout_below="@+id/starsRLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_forecast"
            android:textColor="@color/dark_red"
            android:textSize="15sp"></TextView>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webviewLayout"
        android:layout_below="@+id/starsRLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">
<WebView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/webView">
</WebView>
    </RelativeLayout>
</RelativeLayout>